:heavy_plus_sign: build: Added Swagger dependency

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.datasource.password=123
 
 # Configuracao do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=update;create
+spring.jpa.hibernate.ddl-auto=create
 
 # Configuracao da JPA
 spring.jpa.show-sql=true
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
