--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,14 +2,16 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 # Configuracao do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Configuracao da JPA
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
